<resources>
    <string name="app_name">point-of-sale</string>
    <string name="welcomeText">Welcome to POS</string>
    <string name="usernameText">Enter your username</string>
    <string name="passwordText">Enter your password</string>
    <string name="loginButtonText">Login</string>
    <string name="forgotPasswordText">Forgot your password?</string>
    <string name="toolbarText">Point of sale system</string>
    <string name="viewTicketsText">View receipts</string>
    <string name="addOrderText">Start Order</string>
    <string name="Idk">Idk</string>
    <string name="hardUsername">testuser</string>
    <string name="hardpwd">testpwd</string>
    <string name="homeCardWidth">175dp</string>
    <string name="homeCardHeight">160dp</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="orderToolbarText">Start Order</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>