<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="67dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="fill_parent"
            android:layout_height="60dp">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/toolbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="22dp"
                android:text="@string/toolbarText"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
                app:layout_constraintStart_toStartOf="@+id/toolbar2"
                app:layout_constraintTop_toTopOf="@+id/toolbar2"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="228dp"

            >

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="#6F000000"
                android:foregroundTintMode="src_atop"
                android:scaleType="fitCenter"
                android:scaleX="2"
                android:scaleY="2"
                app:srcCompat="@mipmap/products_foreground" />
        </androidx.cardview.widget.CardView>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="391dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:columnCount="2">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/viewReceipts"
                android:layout_width="175dp"
                android:layout_height="165dp"
                android:background="@android:color/transparent"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="15dp"
                app:layout_column="0"
                app:layout_row="0">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/viewTicketsText"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/startOrder"
                app:cardCornerRadius="15dp"

                android:layout_width="175dp"
                android:layout_height="165dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_column="1"
                app:layout_gravity="end"
                app:layout_row="0" >

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addOrderText" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>